--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Train-Ticket
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Users\\user\\Downloads\\AbsoluteLayout.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
