--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Train-Ticket
 excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\user\\Downloads\\AbsoluteLayout.jar
+file.reference.mysql-connector-j-8.0.33.jar=C:\\Users\\Nathan\\Downloads\\mysql-connector-j-8.0.33.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.mysql-connector-j-8.0.33.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
