--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.mysql-connector-j-8.0.33.jar}
+    ${file.reference.mysql-connector-j-8.0.33.jar}:\
+    ${reference.Project_pbo_2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -80,6 +81,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.Project_pbo_2=../Project pbo 2
+reference.Project_pbo_2.jar=${project.Project_pbo_2}/dist/Project_pbo_2.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
