admin panel jadi! login panel jadi! train schedule jadi! ticket resevation jadi! booking menu jadi! histori booking jadi!

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.output=${dist.jlink.dir}/Train-Ticket
 excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\user\\Downloads\\AbsoluteLayout.jar
 file.reference.mysql-connector-j-8.0.33.jar=C:\\Users\\Nathan\\Downloads\\mysql-connector-j-8.0.33.jar
+file.reference.mysql-connector-j-9.5.0.jar=C:\\Users\\user\\Downloads\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.mysql-connector-j-8.0.33.jar}:\
-    ${reference.Project_pbo_2.jar}
+    ${reference.Project_pbo_2.jar}:\
+    ${file.reference.mysql-connector-j-9.5.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
