--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,15 +34,25 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Train-Ticket
 excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\user\\Downloads\\AbsoluteLayout.jar
+file.reference.core-3.5.4-javadoc.jar=C:\\Users\\Nathan\\Downloads\\core-3.5.4-javadoc.jar
+file.reference.core-3.5.4.jar=C:\\Users\\Nathan\\Downloads\\core-3.5.4.jar
+file.reference.javase-3.5.4.jar=C:\\Users\\Nathan\\Downloads\\javase-3.5.4.jar
 file.reference.mysql-connector-j-8.0.33.jar=C:\\Users\\Nathan\\Downloads\\mysql-connector-j-8.0.33.jar
 file.reference.mysql-connector-j-9.5.0.jar=C:\\Users\\user\\Downloads\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
+file.reference.mysql-connector-j-9.5.0.jar-1=C:\\Users\\Nathan\\Downloads\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
+file.reference.mysql-connector-j-9.5.0.zip=C:\\Users\\Nathan\\Downloads\\mysql-connector-j-9.5.0.zip
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.mysql-connector-j-8.0.33.jar}:\
     ${reference.Project_pbo_2.jar}:\
-    ${file.reference.mysql-connector-j-9.5.0.jar}
+    ${file.reference.mysql-connector-j-9.5.0.jar}:\
+    ${file.reference.core-3.5.4-javadoc.jar}:\
+    ${file.reference.core-3.5.4.jar}:\
+    ${file.reference.mysql-connector-j-9.5.0.zip}:\
+    ${file.reference.mysql-connector-j-9.5.0.jar-1}:\
+    ${file.reference.javase-3.5.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
