--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,9 @@ excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\user\\Downloads\\AbsoluteLayout.jar
 file.reference.core-3.5.4-javadoc.jar=C:\\Users\\Nathan\\Downloads\\core-3.5.4-javadoc.jar
 file.reference.core-3.5.4.jar=C:\\Users\\Nathan\\Downloads\\core-3.5.4.jar
+file.reference.core-3.5.4.jar-1=C:\\Users\\user\\Downloads\\core-3.5.4.jar
 file.reference.javase-3.5.4.jar=C:\\Users\\Nathan\\Downloads\\javase-3.5.4.jar
+file.reference.javase-3.5.4.jar-1=C:\\Users\\user\\Downloads\\javase-3.5.4.jar
 file.reference.mysql-connector-j-8.0.33.jar=C:\\Users\\Nathan\\Downloads\\mysql-connector-j-8.0.33.jar
 file.reference.mysql-connector-j-9.5.0.jar=C:\\Users\\user\\Downloads\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
 file.reference.mysql-connector-j-9.5.0.jar-1=C:\\Users\\Nathan\\Downloads\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
@@ -52,7 +54,9 @@ javac.classpath=\
     ${file.reference.core-3.5.4.jar}:\
     ${file.reference.mysql-connector-j-9.5.0.zip}:\
     ${file.reference.mysql-connector-j-9.5.0.jar-1}:\
-    ${file.reference.javase-3.5.4.jar}
+    ${file.reference.javase-3.5.4.jar}:\
+    ${file.reference.core-3.5.4.jar-1}:\
+    ${file.reference.javase-3.5.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
