--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,6 +42,7 @@ file.reference.javase-3.5.4.jar-1=C:\\Users\\user\\Downloads\\javase-3.5.4.jar
 file.reference.mysql-connector-j-8.0.33.jar=C:\\Users\\Nathan\\Downloads\\mysql-connector-j-8.0.33.jar
 file.reference.mysql-connector-j-9.5.0.jar=C:\\Users\\user\\Downloads\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
 file.reference.mysql-connector-j-9.5.0.jar-1=C:\\Users\\Nathan\\Downloads\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
+file.reference.mysql-connector-j-9.5.0.jar-2=C:\\Users\\Nathan\\Downloads\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
 file.reference.mysql-connector-j-9.5.0.zip=C:\\Users\\Nathan\\Downloads\\mysql-connector-j-9.5.0.zip
 includes=**
 jar.compress=false
@@ -56,7 +57,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-9.5.0.jar-1}:\
     ${file.reference.javase-3.5.4.jar}:\
     ${file.reference.core-3.5.4.jar-1}:\
-    ${file.reference.javase-3.5.4.jar-1}
+    ${file.reference.javase-3.5.4.jar-1}:\
+    ${file.reference.mysql-connector-j-9.5.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
