--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,8 +37,10 @@ file.reference.AbsoluteLayout.jar=C:\\Users\\user\\Downloads\\AbsoluteLayout.jar
 file.reference.core-3.5.4-javadoc.jar=C:\\Users\\Nathan\\Downloads\\core-3.5.4-javadoc.jar
 file.reference.core-3.5.4.jar=C:\\Users\\Nathan\\Downloads\\core-3.5.4.jar
 file.reference.core-3.5.4.jar-1=C:\\Users\\user\\Downloads\\core-3.5.4.jar
+file.reference.core-3.5.4.jar-2=C:\\Users\\deren abrianno\\Downloads\\core-3.5.4.jar
 file.reference.javase-3.5.4.jar=C:\\Users\\Nathan\\Downloads\\javase-3.5.4.jar
 file.reference.javase-3.5.4.jar-1=C:\\Users\\user\\Downloads\\javase-3.5.4.jar
+file.reference.javase-3.5.4.jar-2=C:\\Users\\deren abrianno\\Downloads\\javase-3.5.4.jar
 file.reference.mysql-connector-j-8.0.33.jar=C:\\Users\\Nathan\\Downloads\\mysql-connector-j-8.0.33.jar
 file.reference.mysql-connector-j-9.5.0.jar=C:\\Users\\user\\Downloads\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
 file.reference.mysql-connector-j-9.5.0.jar-1=C:\\Users\\Nathan\\Downloads\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
@@ -58,7 +60,10 @@ javac.classpath=\
     ${file.reference.javase-3.5.4.jar}:\
     ${file.reference.core-3.5.4.jar-1}:\
     ${file.reference.javase-3.5.4.jar-1}:\
-    ${file.reference.mysql-connector-j-9.5.0.jar-2}
+    ${file.reference.mysql-connector-j-9.5.0.jar-2}:\
+    ${file.reference.javase-3.5.4.jar-2}:\
+    ${file.reference.core-3.5.4.jar-2}:\
+    ${libs.MySQL_Connector_JDBC.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
@@ -94,7 +99,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Train-Ticket
-main.class=train.ticket.TrainTicket
+main.class=client.views.LoginPanel
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
